--- a/Residency4/EnsembleTechinques/EnsembleTechniques_Residency4_Project1_KG.ipynb
+++ b/Residency4/EnsembleTechinques/EnsembleTechniques_Residency4_Project1_KG.ipynb
@@ -13,9 +13,206 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N2k9_zhpPtdm",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Project Descrition\n",
+        "Parkinson’s Disease (PD) is a degenerative neurological disorder marked by decreased dopamine levels in the brain. It manifests itself through a deterioration of movement, including the presence of tremors and stiffness. There is commonly a marked effect on speech, including dysarthria (difficulty articulating sounds), hypophonia (lowered volume), and monotone (reduced pitch range). Additionally, cognitive impairments and changes in mood can occur, and risk of dementia is increased.\n",
+        "\n",
+        "Traditional diagnosis of Parkinson’s Disease involves a clinician taking a neurological history of the patient and observing motor skills in various situations. Since there is no definitive laboratory test to diagnose PD, diagnosis is often difficult, particularly in the early stages when motor effects are not yet severe. Monitoring progression of the disease over time requires repeated clinic visits by the patient. An effective screening process, particularly one that doesn’t require a clinic visit, would be beneficial. Since PD patients exhibit characteristic vocal features, voice recordings are a useful and non-invasive tool for diagnosis. If machine learning algorithms could be applied to a voice recording dataset to accurately diagnosis PD, this would be an effective screening step prior to an appointment with a clinician.\n",
+        "\n",
+        "The data & attributes information for this project is available at -\n",
+        "\n",
+        "https://archive.ics.uci.edu/ml/machine-learning-databases/parkinsons/\n",
+        "\n",
+        "The data consists of those diagnosed with Parkinson Disease and those who do not."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IT0fLiKgP4CT",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Steps to be followed:\n",
+        "\n",
+        "1. Load the data set\n",
+        "2. It is always a good practice to eye-ball raw data to get a feel of the data in terms of number of structure of the file, number of attributes, types of attributes and a general idea of likely challenges in the data set. (2.5 points)\n",
+        "3. Using uni-variate & bi-variate analysis to check the individual attributes for their basic statistic such as central values, spread, tails etc. What are your observations? (15 points)\n",
+        "4. Split the data set into training and test set in the ratio of 70:30 (Training:Test)\n",
+        "5. Create the model using “entropy” method of reducing the entropy and fit it to training data. (5 points)\n",
+        "6. Test the model on test data and what is the accuracy achieved. Capture the predicted values and do a cross-tab. (7.5 points)\n",
+        "7. Use regularization parameters of max_depth, min_sample_leaf to recreate the model. What is the impact on the model accuracy? How does regularization help? (20 points)\n",
+        "8. Next implement the decision tree using Random Forest. What is the optimal number of trees that gives the best result? (10 points)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oivgvZVyQuem",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Solution Below"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9vfPxrNdQyCv",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Load the data set"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iWqrzKdBRPeC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OkYC4_5UQ1eK",
+        "colab_type": "text"
+      },
+      "source": [
+        "##About the dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jMY701RdRQHD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qn4_kjwQQ8i0",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Uni-variate and Bi-variate analysis"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m9nuGDpmRQuI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kVx-irUyRErW",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Train:Test Split (70:30)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5DtXqa4dRRgB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q-PTNoxoRM4h",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Entropy"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "soLesnoqkJUw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3To_6X-TRab-",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Regularization and Model Accuracy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Of3DxDqHRisf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S0J2cXmBRjSL",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Random Forest"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gNQ6UzL1RmQJ",
         "colab_type": "code",
         "colab": {}
       },
