with final observation noted.

--- a/NNDL/Neural Nets and Deep Learning Project_KG.ipynb
+++ b/NNDL/Neural Nets and Deep Learning Project_KG.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1595454252657",
+   "name": "python_defaultSpec_1595454311865",
    "display_name": "Python 3.7.7 64-bit ('tensorflow-gpu': conda)"
   }
  },
@@ -585,10 +585,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# have now observed better accuracy when we have increased the learning rate as well."
+   ]
   }
  ]
 }
